grammar.ebnf
(*
 * grammar.ebnf
 *
 * 一门多范式（过程式 + 函数式）、渐进类型、基于 GC 的编程语言。
 * 同时面向字节码 VM 与 LLVM/本地代码后端。
 *)

program
    = { top_level_statement } ;

top_level_statement
    = package_decl
    | import_stmt
    | function_decl
    | struct_decl
    | data_class_decl
    | class_decl
    | enum_decl
    | trait_decl
    | impl_decl
    | statement
    ;

package_decl
    = "package" module_path ";"
    ;

import_stmt
    = "import" string_literal [ "as" identifier ] ";"
    ;

module_path
    = identifier { "." identifier }
    ;

function_decl
    = [ "async" ] "fun" identifier [ generic_params ] "(" [ parameter_list ] ")" [ ":" type ] block
    ;

parameter_list
    = parameter { "," parameter }
    ;

parameter
    = identifier ":" type [ "=" expression ]
    ;

struct_decl
    = "struct" identifier [ generic_params ] "{" [ field_list ] "}"
    ;

data_class_decl
    = "data" "class" identifier [ generic_params ] "(" [ constructor_param_list ] ")"
    ;

class_decl
    = "class" identifier [ generic_params ] [ ":" type_list ] "{" { class_member } "}"
    ;

class_member
    = field_decl
    | function_decl
    | constructor_decl
    ;

constructor_decl
    = "init" "(" [ parameter_list ] ")" block
    ;

field_decl
    = ( "val" | "var" ) identifier ":" type [ "=" expression ] ";"
    ;

field_list
    = field { "," field }
    ;

field
    = identifier ":" type
    ;

constructor_param_list
    = constructor_param { "," constructor_param }
    ;

constructor_param
    = ( "val" | "var" ) identifier ":" type [ "=" expression ]
    ;

enum_decl
    = "enum" identifier [ generic_params ] "{" enum_variant { "," enum_variant } [ "," ] "}"
    ;

enum_variant
    = identifier [ "(" type { "," type } ")" ]
    ;

trait_decl
    = "trait" identifier [ generic_params ] "{" { trait_member } "}"
    ;

trait_member
    = function_decl
    | function_signature
    ;

function_signature
    = "fun" identifier "(" [ parameter_list ] ")" [ ":" type ] ";"
    ;

impl_decl
    = "impl" [ type "for" ] type "{" { function_decl } "}"
    ;

statement
    = variable_decl
    | assignment
    | expression_stmt
    | if_stmt
    | match_stmt
    | while_stmt
    | do_while_stmt
    | until_stmt
    | for_stmt
    | for_in_stmt
    | return_stmt
    | break_stmt
    | continue_stmt
    | throw_stmt
    | try_stmt
    | block
    ;

variable_decl
    = ( "val" | "var" ) identifier [ ":" type ] [ "=" expression ] ";"
    ;

assignment
    = expression "=" expression ";"
    | expression "+=" expression ";"
    | expression "-=" expression ";"
    | expression "*=" expression ";"
    | expression "/=" expression ";"
    | expression "%=" expression ";"
    ;

expression_stmt
    = expression ";"
    ;

if_stmt
    = "if" "(" expression ")" block [ "else" ( if_stmt | block ) ]
    ;

match_stmt
    = "match" "(" expression ")" "{" match_arm { "," match_arm } [ "," ] "}"
    ;

match_arm
    = pattern "=>" ( expression | block )
    ;

pattern
    = identifier [ "(" pattern { "," pattern } ")" ]
    | "_"
    | literal
    | identifier "@" pattern
    ;

while_stmt
    = "while" "(" expression ")" block
    | "while" expression block
    ;

until_stmt
    = "while" "until" "(" expression ")" block
    | "while" "until" expression block
    ;

do_while_stmt
    = "do" block "while" "(" expression ")" ";"
    ;

for_stmt
    = "for" "(" [ variable_decl_no_semi ] ";" [ expression ] ";" [ expression ] ")" block
    ;

variable_decl_no_semi
    = ( "val" | "var" ) identifier [ ":" type ] [ "=" expression ]
    ;

for_in_stmt
    = "for" "(" identifier "in" expression ")" block
    | "for" identifier "in" expression block
    ;

return_stmt
    = "return" [ expression ] ";"
    ;

break_stmt
    = "break" ";"
    ;

continue_stmt
    = "continue" ";"
    ;

throw_stmt
    = "throw" expression ";"
    ;

try_stmt
    = "try" block { catch_clause } [ finally_clause ]
    ;

catch_clause
    = "catch" "(" [ identifier ":" ] type ")" block
    ;

finally_clause
    = "finally" block
    ;

block
    = "{" { statement } "}"
    ;

expression
    = await_expr
    ;

await_expr
    = [ "await" ] or_expr
    ;

or_expr
    = and_expr { "||" and_expr }
    ;

and_expr
    = equality_expr { "&&" equality_expr }
    ;

equality_expr
    = relational_expr { ( "==" | "!=" ) relational_expr }
    ;

relational_expr
    = range_expr { ( "<" | ">" | "<=" | ">=" ) range_expr }
    ;

range_expr
    = additive_expr [ ".." additive_expr ]
    ;

additive_expr
    = multiplicative_expr { ( "+" | "-" ) multiplicative_expr }
    ;

multiplicative_expr
    = unary_expr { ( "*" | "/" | "%" ) unary_expr }
    ;

unary_expr
    = ( "!" | "-" | "+" | "&" | "*" ) unary_expr
    | postfix_expr
    ;

postfix_expr
    = primary_expr { postfix }
    ;

postfix
    = "(" [ argument_list ] ")"
    | "." identifier
    | "?"
    | "!!"
    ;

argument_list
    = expression { "," expression }
    ;

primary_expr
    = identifier
    | literal
    | "(" expression ")"
    | block
    | if_stmt
    | match_stmt
    | lambda_expr
    | struct_literal
    | data_class_literal
    | array_literal
    | spawn_expr
    | receive_expr
    ;

lambda_expr
    = "(" [ lambda_param_list ] ")" [ ":" type ] "->" ( expression | block )
    ;

lambda_param_list
    = lambda_param { "," lambda_param }
    ;

lambda_param
    = identifier [ ":" type ]
    ;

struct_literal
    = identifier [ generic_args ] "{" [ field_init_list ] "}"
    ;

data_class_literal
    = identifier [ generic_args ] "(" [ argument_list ] ")"
    ;

field_init_list
    = field_init { "," field_init }
    ;

field_init
    = identifier ":" expression
    | identifier
    ;

array_literal
    = "[" [ expression { "," expression } ] "]"
    ;

spawn_expr
    = "spawn" expression
    ;

receive_expr
    = "receive" "(" [ expression ] ")"
    ;

type
    = union_type
    ;

union_type
    = nullable_type { "|" nullable_type }
    ;

nullable_type
    = primary_type [ "?" ]
    ;

primary_type
    = identifier [ generic_args ]
    | "(" [ type { "," type } ] ")"
    | "[" type "]"
    | "func" "(" [ type { "," type } ] ")" [ ":" type ]
    | "Result" "<" type "," type ">"
    | "Option" "<" type ">"
    ;

type_list
    = type { "," type }
    ;

generic_params
    = "<" identifier [ ":" type ] { "," identifier [ ":" type ] } ">"
    ;

generic_args
    = "<" type { "," type } ">"
    ;

literal
    = integer_literal
    | float_literal
    | string_literal
    | char_literal
    | boolean_literal
    | "null"
    ;

integer_literal
    = decimal_literal
    | hex_literal
    | binary_literal
    ;

decimal_literal
    = digit { digit }
    ;

hex_literal
    = "0x" hex_digit { hex_digit }
    ;

binary_literal
    = "0b" binary_digit { binary_digit }
    ;

float_literal
    = decimal_literal "." decimal_literal [ exponent ]
    ;

exponent
    = ( "e" | "E" ) [ "+" | "-" ] decimal_literal
    ;

string_literal
    = '"' { string_char } '"'
    ;

char_literal
    = "'" char_char "'"
    ;

boolean_literal
    = "true" | "false"
    ;

identifier
    = letter { letter | digit | "_" }
    | "_" { letter | digit | "_" }
    ;

letter
    = "a" .. "z" | "A" .. "Z"
    ;

digit
    = "0" .. "9"
    ;

hex_digit
    = digit | "a" .. "f" | "A" .. "F"
    ;

binary_digit
    = "0" | "1"
    ;

string_char
    = any_unicode_char - '"' - "\\"
    | escape_sequence
    ;

char_char
    = any_unicode_char - "'" - "\\"
    | escape_sequence
    ;

escape_sequence
    = "\\" ( "n" | "t" | "r" | "\\" | '"' | "'" )
    ;
